# cuda-inference-engine

./: .gitignore  CMakeLists.txt  README.md  main.c  train_gpt2.c  train_gpt2.cu  train_gpt2_optimized.cu
dev/cuda/: utils.h
llmc/: CMakeLists.txt  common.h  dataloader.c  dataloader.h  rand.c  rand.h  tokenizer.c  tokenizer.h
python-prototype/: gpt-dev.ipynb
